--- a/src/app/profile/profileSecciones/mis-ordenes/mis-ordenes.component.html
+++ b/src/app/profile/profileSecciones/mis-ordenes/mis-ordenes.component.html
@@ -179,7 +179,7 @@
                     #{{ ordenes.indexOf(orden) + 1 }}
                     </h3>
                     <p class="text-base text-slate-500 mt-2">
-                    <strong>ID Orden:</strong> ${{ orden.id }}
+                    <strong>ID Orden:</strong> {{ orden.id }}
                   </p>  
                   <p class="text-base text-slate-500">
                     <strong>Total:</strong> ${{ orden.valor_total }}
