100% completado anda mail y crea tiket el mail

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,10 +13,10 @@
         <img src="images/bernd-dittrich-yfTSNbggFyE-unsplash.jpg" class="absolute inset-0 w-full h-full object-cover" alt="...">
       </div>
       <div id="carousel-item-4" class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="images/2.png" class="absolute inset-0 w-full h-full object-cover" alt="...">
+        <img src="images/3.avif" class="absolute inset-0 w-full h-full object-cover" alt="...">
       </div>
       <div id="carousel-item-5" class="hidden duration-700 ease-in-out" data-carousel-item>
-        <img src="images/1.png" class="absolute inset-0 w-full h-full object-cover" alt="...">
+        <img src="images/4.jpg" class="absolute inset-0 w-full h-full object-cover" alt="...">
       </div>
       <!-- Texto y globitos siempre arriba -->
       <div class="absolute inset-0 flex flex-col items-center justify-center z-40 pointer-events-none">
